# ts-sandbox

./: .gitignore  next.config.js  starter_code.ts
pages/: index.js
swc/: Cargo.toml  LICENSE_MIT  build.ts  run.ts
swc/pkg/: package.json  swc_wasm.d.ts  swc_wasm.js  swc_wasm_bg.wasm.d.ts
swc/src/: lib.rs
