[package]
name = "swc_wasm"
version = "0.1.0"
authors = ["Zack Radisic <56137411+zackradisic@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

swc = "0.56.1"
swc_common = "0.12.2"
swc_ecma_ast = "0.52.0"
swc_ecma_parser = "0.70.4"
serde_json = "1.0.68"
anyhow = "1.0.44"
swc_ecma_visit = "0.38.1"
swc_ecma_transforms = "0.72.0"
serde = { version = "1.0.100", features = ["derive"] }
serde_derive = "1.0.130"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
